--- a/membre-dashboard.html
+++ b/membre-dashboard.html
@@ -181,6 +181,20 @@
         </section>
 
         <div class="features-grid">
+             <div class="feature-card" onclick="window.location.href='projet-binv.html'">
+        <div class="feature-icon">
+            <i class="fas fa-blind"></i>
+        </div>
+        <h3>Projet BINV_V360</h3>
+        <p>Bâton Intelligent pour Non-Voyants - Accédez aux détails techniques complets</p>
+        <div class="project-status" style="margin-top: 1rem;">
+            <div class="progress-bar">
+                <div class="progress" style="width: 30%"></div>
+            </div>
+            <span>30%</span>
+        </div>
+    </div>
+    
             <div class="feature-card">
                 <div class="feature-icon">
                     <i class="fas fa-project-diagram"></i>
