--- a/index.html
+++ b/index.html
@@ -891,6 +891,23 @@
                 height: 400px;
             }
         }
+        .scan-btn {
+    background: linear-gradient(135deg, #e74c3c, #c0392b);
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    font-size: 1.1rem;
+    font-weight: 700;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 15px rgba(231, 76, 60, 0.3);
+}
+
+.scan-btn:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 6px 20px rgba(231, 76, 60, 0.4);
+}
     </style>
 </head>
 <body>
@@ -2143,6 +2160,7 @@ localStorage.setItem('employesAFRICA', JSON.stringify(employesAFRICA));
 </body>
 </html>
               
+
 
 
 
