--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
         POSTULER POUR REJOINDRE AFRICA.TECH21
         <!-- Bouton Scan QR Code -->
 <div class="scan-container" style="margin-top: 1rem; text-align: center;">
-    <button class="scan-btn" onclick="openQRScanner()">
+  <button class="scan-btn" onclick="window.location.href = 'scan.html'">
         <i class="fas fa-camera"></i>
         SCAN QR CODE EMPLOYÉ
     </button>
@@ -2160,6 +2160,7 @@ localStorage.setItem('employesAFRICA', JSON.stringify(employesAFRICA));
 </body>
 </html>
               
+
 
 
 
