--- a/membre-dashboard.html
+++ b/membre-dashboard.html
@@ -325,6 +325,20 @@
                 sendMessage();
             }
         });
+        <!-- Carte R.S.M.A pour membres -->
+<div class="project-card" style="background: linear-gradient(135deg, #1e3a5f, #4a90e2); color: white;">
+    <div class="project-badge">🤖 NOUVEAU</div>
+    <h3>R.S.M.A - Robot Sous-marin Autonome</h3>
+    <p>Exploration maritime avancée avec intelligence artificielle</p>
+    <div class="project-features">
+        <span>📸 Capture multimedia</span>
+        <span>🗺️ Cartographie</span>
+        <span>🤖 Autonomie IA</span>
+    </div>
+    <a href="rsma.html" class="member-access-btn">
+        <i class="fas fa-water"></i> ACCÉDER AUX DÉTAILS COMPLETS
+    </a>
+</div>
     </script>
 </body>
 </html>
