--- a/index.html
+++ b/index.html
@@ -174,6 +174,73 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+        /* AJOUTEZ CE STYLE DANS VOTRE SECTION CSS */
+.search-bar-header {
+    position: relative;
+    margin: 0 2rem;
+}
+
+.search-input-header {
+    padding: 8px 15px 8px 35px;
+    border: none;
+    border-radius: 20px;
+    width: 250px;
+    font-size: 14px;
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+    backdrop-filter: blur(10px);
+    transition: all 0.3s;
+}
+
+.search-input-header::placeholder {
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.search-input-header:focus {
+    outline: none;
+    background: rgba(255, 255, 255, 0.2);
+    width: 300px;
+}
+
+.search-icon-header {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.search-results-header {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+    max-height: 300px;
+    overflow-y: auto;
+    display: none;
+    z-index: 1000;
+    margin-top: 5px;
+}
+
+.search-result-item {
+    padding: 12px 15px;
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
+    color: var(--dark);
+    transition: background 0.3s;
+}
+
+.search-result-item:hover {
+    background: #f8f9fa;
+    color: var(--primary);
+}
+
+.search-result-item:last-child {
+    border-bottom: none;
+}
 
         .auth-buttons {
             display: flex;
@@ -1481,5 +1548,6 @@ alert('Formulaire envoyé ! Redirection vers la page de confirmation...');
  
 </body>
 </html>
+
 
 
