--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
             transition: color 0.3s;
             position: relative;
         }
+      
+
+<div class="search-bar-header">
+    <i class="fas fa-search search-icon-header"></i>
+    <input type="text" class="search-input-header" placeholder="Rechercher..." id="headerSearchInput">
+    <div class="search-results-header" id="headerSearchResults"></div>
+</div>
 
         .nav-menu li a:hover {
             color: var(--secondary);
@@ -1622,6 +1629,7 @@ document.getElementById('headerSearchInput').addEventListener('keypress', functi
  
 </body>
 </html>
+
 
 
 
