--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
                 </div>
                 
                 <div class="form-body">
-                   <form id="registrationForm" name="candidature-africa-tech" netlify action="/success.html" method="POST">
+                   <form id="registrationForm" name="candidature-africa-tech" netlify action="/success.html" method="POST" **onsubmit="saveToLocalStorage()"**>
                         <div class="form-row">
                             <div class="form-column">
                                 <div class="form-group">
@@ -1629,6 +1629,7 @@ document.getElementById('headerSearchInput').addEventListener('keypress', functi
  
 </body>
 </html>
+
 
 
 
