--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             line-height: 1.6;
         }
 
-        /* HEADER */
         .header {
             background: var(--light);
             padding: 1rem 2rem;
@@ -109,7 +108,6 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
-        /* HERO SECTION */
         .hero {
             background: linear-gradient(rgba(26, 47, 59, 0.8), rgba(44, 85, 48, 0.8)), 
                         url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3') center/cover;
@@ -147,7 +145,6 @@
             flex-wrap: wrap;
         }
 
-        /* SECTION DEVENIR MEMBRE */
         .membership {
             padding: 5rem 2rem;
             background: var(--light);
@@ -169,7 +166,6 @@
             margin-right: auto;
         }
 
-        /* SECTION PROJETS */
         .projects {
             padding: 5rem 2rem;
             background: #f8f9fa;
@@ -194,10 +190,8 @@
 
         .project-card:hover {
             transform: translateY(-10px);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-        }
-
-        .project-image {
+            box-shadow: 0 20px 40px rgba(0,0
+                                                 .project-image {
             height: 250px;
             background: linear-gradient(135deg, var(--dark), var(--primary));
             display: flex;
@@ -230,7 +224,6 @@
             font-size: 0.9rem;
         }
 
-        /* SECTION CONTACT */
         .contact {
             padding: 5rem 2rem;
             background: white;
@@ -261,7 +254,6 @@
             width: 30px;
         }
 
-        /* FOOTER */
         .footer {
             background: var(--dark);
             color: white;
@@ -284,7 +276,6 @@
             color: var(--secondary);
         }
 
-        /* RESPONSIVE */
         @media (max-width: 768px) {
             .nav {
                 flex-direction: column;
@@ -490,7 +481,6 @@
     </footer>
 
     <script>
-        // Navigation fluide
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
@@ -504,7 +494,6 @@
             });
         });
 
-        // Animation au scroll
         const observerOptions = {
             threshold: 0.1,
             rootMargin: '0px 0px -50px 0px'
@@ -519,7 +508,6 @@
             });
         }, observerOptions);
 
-        // Observer les cartes de projet
         document.querySelectorAll('.project-card').forEach(card => {
             card.style.opacity = '0';
             card.style.transform = 'translateY(30px)';
