--- a/espace-membres.html
+++ b/espace-membres.html
@@ -553,9 +553,10 @@
             }, 1000);
         });
 
-        // Initialisation
+        // Initialisation - PLUS DE PRÉ-REMPLISSAGE !
         document.addEventListener('DOMContentLoaded', function() {
             createParticles();
+            // TOUS LES CHAMPS RESTENT VIDES - C'EST CE QU'IL FAUT !
         });
 
         // Entrée pour soumettre le formulaire
