--- a/dashboard.html
+++ b/dashboard.html
@@ -857,7 +857,7 @@
                 <div class="feature-status status-active">STATUS: DÉVELOPPEMENT ACTIF</div>
             </div>
             
-            <div class="feature-card" onclick="window.location.href='robot-assistant.html'">
+            <div class="feature-card" onclick="onclick="window.location.href='rga.html'">
                 <div class="feature-icon">
                     <i class="fas fa-robot"></i>
                 </div>
