--- a/dashboard.html
+++ b/dashboard.html
@@ -884,17 +884,17 @@
                 <div class="feature-status status-active">ACCÈS: AUTORISÉ</div>
             </div>
 
-            <div class="feature-card">
-                <div class="feature-icon">
-                    <i class="fas fa-users-cog"></i>
-                </div>
-                <h3 class="feature-title">RÉSEAU COLLABORATIF</h3>
-                <p class="feature-description">
-                    Plateforme de collaboration en temps réel avec les membres de l'équipe, 
-                    partage de ressources et coordination des développements.
-                </p>
-                <div class="feature-status status-coming">LANCEMENT: Q1 2024</div>
-            </div>
+          <div class="feature-card" onclick="window.location.href='collaboratif.html'">
+    <div class="feature-icon">
+        <i class="fas fa-users-cog"></i>
+    </div>
+    <h3 class="feature-title">RÉSEAU COLLABORATIF</h3>
+    <p class="feature-description">
+        Plateforme de collaboration en temps réel avec les membres de l'équipe, 
+        partage de ressources et coordination des développements.
+    </p>
+    <div class="feature-status status-active">ACCÈS: DISPONIBLE</div>
+</div>
         </div>
 
         <!-- Section Communication -->
