--- a/admin-techbot.htm
+++ b/admin-techbot.htm
@@ -6,7 +6,6 @@
     <title>Admin - Messages TechBot | AFRICA.TECH21</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Exo+2:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <style>
         * {
             margin: 0;
@@ -314,70 +313,48 @@
                 <i class="fas fa-sync-alt"></i> Actualiser
             </button>
             <button class="btn" onclick="exportMessages()">
-                <i class="fas fa-download"></i> Exporter
-            </button>
-            <button class="btn btn-danger" onclick="clearAllMessages()">
-                <i class="fas fa-trash"></i> Tout Supprimer
+                <i class="fas fa-download"></i> Exporter CSV
             </button>
         </div>
 
         <!-- Messages Grid -->
         <div class="messages-grid" id="messagesGrid">
-            <!-- Les messages seront injectés ici -->
+            <div class="empty-state">
+                <i class="fas fa-spinner fa-spin"></i>
+                <p>Chargement des messages...</p>
+            </div>
         </div>
     </div>
 
     <script>
-        // Protection - Vérifier si connecté
+        const API_URL = 'https://script.google.com/macros/s/AKfycbxW8v7w20VhaIsDWnEUUZAqHMobtIuKAoVmkxI9ygRRbTmBZq2xkN49Nk2g6RoO4R0/exec';
+
+        // Protection
         if (localStorage.getItem('adminLoggedIn') !== 'true') {
             window.location.href = 'admin-login.html';
         }
 
-        // Afficher le nom d'utilisateur
         document.getElementById('adminUser').textContent = localStorage.getItem('adminUsername') || 'Admin';
-
-        // Fonction de déconnexion
-        function logout() {
-            if (confirm('Vous voulez vraiment vous déconnecter ?')) {
-                localStorage.removeItem('adminLoggedIn');
-                localStorage.removeItem('adminUsername');
-                localStorage.removeItem('adminLoginTime');
-                window.location.href = 'admin-login.html';
-            }
-        }
 
         let allMessages = [];
 
         // Charger les messages
-        function loadMessages() {
-            // Note: EmailJS envoie directement par email
-            // Cette page affiche un message informatif
-            displayInfoMessage();
-        }
-
-        // Afficher message informatif
-        function displayInfoMessage() {
-            const grid = document.getElementById('messagesGrid');
-            grid.innerHTML = `
-                <div class="empty-state">
-                    <i class="fas fa-envelope-open-text"></i>
-                    <p style="font-size: 1.5rem; margin-bottom: 1rem;">
-                        📧 Messages reçus par Email
-                    </p>
-                    <p style="color: rgba(255, 255, 255, 0.7); max-width: 600px; margin: 0 auto; line-height: 1.8;">
-                        Tous les messages TechBot sont automatiquement envoyés à votre adresse email :
-                        <strong style="color: var(--neon-blue);">africa.tech21.net@gmail.com</strong>
-                    </p>
-                    <p style="color: rgba(255, 255, 255, 0.6); margin-top: 1.5rem; font-size: 0.9rem;">
-                        Consultez votre boîte mail pour voir tous les messages des utilisateurs du monde entier.
-                    </p>
-                </div>
-            `;
-
-            // Stats à zéro
-            document.getElementById('totalMessages').textContent = '∞';
-            document.getElementById('todayMessages').textContent = '∞';
-            document.getElementById('uniqueUsers').textContent = '∞';
+        async function loadMessages() {
+            try {
+                const response = await fetch(API_URL);
+                const messages = await response.json();
+                allMessages = messages;
+                displayMessages(messages);
+                updateStats();
+            } catch (error) {
+                console.error('Erreur:', error);
+                document.getElementById('messagesGrid').innerHTML = `
+                    <div class="empty-state">
+                        <i class="fas fa-exclamation-triangle"></i>
+                        <p>Erreur de chargement des messages</p>
+                    </div>
+                `;
+            }
         }
 
         // Afficher les messages
@@ -412,9 +389,6 @@
                             <button class="btn btn-small" onclick="copyEmail('${msg.email}')">
                                 <i class="fas fa-copy"></i> Email
                             </button>
-                            <button class="btn btn-small btn-danger" onclick="deleteMessage(${msg.id})">
-                                <i class="fas fa-trash"></i>
-                            </button>
                         </div>
                     </div>
                     <div class="message-content">
@@ -429,14 +403,12 @@
             const total = allMessages.length;
             document.getElementById('totalMessages').textContent = total;
 
-            // Messages aujourd'hui
             const today = new Date().toLocaleDateString('fr-FR');
             const todayCount = allMessages.filter(msg => 
-                msg.timestamp.split(',')[0] === today
+                msg.timestamp && msg.timestamp.includes(today.split('/').reverse().join('/'))
             ).length;
             document.getElementById('todayMessages').textContent = todayCount;
 
-            // Utilisateurs uniques
             const uniqueEmails = new Set(allMessages.map(msg => msg.email));
             document.getElementById('uniqueUsers').textContent = uniqueEmails.size;
         }
@@ -454,17 +426,40 @@
 
         // Actualiser
         function refreshMessages() {
-            showNotification('Les messages sont dans votre email !', 'success');
+            showNotification('Actualisation...', 'success');
+            loadMessages();
         }
 
-        // Exporter (désactivé)
+        // Exporter
         function exportMessages() {
-            showNotification('Consultez votre boîte mail pour exporter', 'success');
+            const csv = [
+                ['Nom', 'Email', 'Message', 'Date'],
+                ...allMessages.map(msg => [msg.name, msg.email, msg.message, msg.timestamp])
+            ].map(row => row.join(',')).join('\n');
+
+            const blob = new Blob([csv], { type: 'text/csv' });
+            const url = window.URL.createObjectURL(blob);
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = `techbot_messages_${new Date().toISOString().split('T')[0]}.csv`;
+            a.click();
+            
+            showNotification('Messages exportés !', 'success');
         }
 
-        // Supprimer (désactivé)
-        function clearAllMessages() {
-            showNotification('Gérez vos emails directement dans votre boîte mail', 'success');
+        // Copier email
+        function copyEmail(email) {
+            navigator.clipboard.writeText(email);
+            showNotification('Email copié !', 'success');
+        }
+
+        // Déconnexion
+        function logout() {
+            if (confirm('Vous voulez vraiment vous déconnecter ?')) {
+                localStorage.removeItem('adminLoggedIn');
+                localStorage.removeItem('adminUsername');
+                window.location.href = 'admin-login.html';
+            }
         }
 
         // Notification
@@ -491,7 +486,6 @@
             }, 3000);
         }
 
-        // Style pour les animations
         const style = document.createElement('style');
         style.textContent = `
             @keyframes slideIn {
@@ -508,8 +502,8 @@
         // Initialisation
         loadMessages();
 
-        // Désactiver auto-refresh
-        // setInterval(loadMessages, 30000);
+        // Auto-refresh toutes les 30 secondes
+        setInterval(loadMessages, 30000);
     </script>
 </body>
 </html>
