--- a/signup.html
+++ b/signup.html
@@ -663,7 +663,7 @@
                 submitBtn.innerHTML = '<i class="fas fa-check"></i> Compte créé avec succès !';
                 
                 setTimeout(() => {
-                    window.location.href = 'dashboard.html';
+                    window.location.href = 'index.html';
                 }, 1500);
                 
             } catch (error) {
