--- a/signup.html
+++ b/signup.html
@@ -524,7 +524,7 @@
 
     <script>
         if (localStorage.getItem('memberLoggedIn') === 'true') {
-            window.location.href = 'dashboard.html';
+            window.location.href = 'index.html';
         }
 
         const INSCRIPTION_API_URL = 'https://script.google.com/macros/s/AKfycbys1RNFDHXysSWYgPRP8rhVApFBuRMh2RKoyYm-FqrR4Tni4aiCt4Y2YQWcniJrsYM/exec';
