--- a/signup.html
+++ b/signup.html
@@ -509,7 +509,7 @@
             </form>
 
             <div class="form-links">
-                <a href="espace-membres.html">
+                <a href="index.html">
                     <i class="fas fa-sign-in-alt"></i> Déjà un compte ? Se connecter
                 </a>
             </div>
