--- a/dashboard.html
+++ b/dashboard.html
@@ -1543,7 +1543,7 @@
         <div class="modal-content cyber-modal">
             <div class="modal-header">
                 <h2><i class="fas fa-robot"></i> IATECH ASSISTANT</h2>
-                <button class="close-modal" onclick="closeIATech()">&times;</button>
+                <button class="close-modal"onclick="fermerIATech()">&times;</button>
             </div>
             
             <div class="modal-body">
