--- a/dashboard.html
+++ b/dashboard.html
@@ -1451,7 +1451,7 @@
                     <div class="manual-input">
                         <input type="text" 
                                id="manualMatricule" 
-                               placeholder="Ou saisir manuellement (ex: MAJOR186ROBOTIC)"
+                               placeholder="Ou saisir manuellement)"
                                autocomplete="off">
                         <button onclick="validerMatriculeManuel()">
                             <i class="fas fa-check-circle"></i> VALIDER
