--- a/dashboard.html
+++ b/dashboard.html
@@ -2020,7 +2020,11 @@
                 
             }, 2000);
         }
-
+        // ==================== ESPACE MAJOR ====================
+        function accederEspaceMajor() {
+            // Code simple pour commencer
+            window.open('espace-major.html', '_blank');
+        }
         // ==================== INITIALISATION ====================
         window.addEventListener('load', () => {
             console.log("🚀 Dashboard chargé");
